Update SonarQube project properties(For the SonarScanner)

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,10 @@
 sonar.projectKey=flask_image_recognition
+sonar.projectName=flask_image_recognition
+sonar.projectVersion=1.0
+
+sonar.sources=.
+
+sonar.language=py
+
+sonar.host.url=http://localhost:9000
+sonar.login=sqp_65ccc50bf15c0fc329a26d86da635bd6b0c6d081
