--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -25,6 +25,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Install pre-commit
+        run: |
+          pip install pre-commit
+
       - name: Run pre-commit checks
         run: |
           pre-commit run --all-files  # Run pre-commit checks
