--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -55,6 +55,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install werkzeug==1.0.1
+          pip install --upgrade flask  # Ensure Flask is up-to-date
 
       - name: Run unit tests
         run: |
