--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -79,6 +79,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install werkzeug==1.0.1
+          pip install --upgrade flask  # Ensure Flask is up-to-date
 
       - name: Run happy path and sad path tests
         run: |
@@ -101,6 +103,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install werkzeug==1.0.1
+          pip install --upgrade flask  # Ensure Flask is up-to-date
 
       - name: Run acceptance tests
         run: |
