--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Install your project dependencies
+          pip install -r requirements.txt
+          pip install werkzeug==1.0.1
+          pip install --upgrade flask  # Ensure Flask is up-to-date
 
       - name: Run tests
         run: |
